[package]
name = "rrv32"
version = "0.1.0"
edition = "2021"
default-run = "ttybox"
license = "MIT OR Apache-2.0"
authors = ["Solra Bizna <solra@bizna.name>"]
description = "A modular RV32GCQ implementation in Rust"
repository = "https://github.com/SolraBizna/rrv32"

[dependencies]
anyhow = "1.0.72"
rustc_apfloat = {version = "0.2.0", optional = true}
ieee-apsqrt = "0.1.1"

[features]
default = ["float", "C"]
float = ["rustc_apfloat"]
C = []